--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "homepage": "https://jaikamat.github.io/clubhouse-pos-importer/",
     "dependencies": {
+        "query-string": "^6.8.3",
         "react": "^16.11.0",
         "react-dom": "^16.11.0",
         "react-router-dom": "^5.1.2",
