--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
     "private": true,
     "homepage": "https://jaikamat.github.io/clubhouse-pos-importer/",
     "dependencies": {
+        "axios": "^0.19.0",
+        "lodash": "^4.17.15",
         "query-string": "^6.8.3",
         "react": "^16.11.0",
         "react-dom": "^16.11.0",
         "react-router-dom": "^5.1.2",
         "react-scripts": "3.2.0",
+        "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^0.88.1"
     },
     "scripts": {
