--- a/gc_functions/package.json
+++ b/gc_functions/package.json
@@ -10,6 +10,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@google-cloud/functions-framework": "^1.3.2"
+        "@google-cloud/functions-framework": "^1.3.2",
+        "dotenv": "^8.2.0",
+        "mongodb": "^3.3.4"
     }
 }
