--- a/gc_functions/package.json
+++ b/gc_functions/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "addCardToInventory": "functions-framework --target=addCardToInventory"
+        "addCardToInventory": "functions-framework --target=addCardToInventory",
+        "getCardsFromInventory": "functions-framework --target=getCardsFromInventory"
     },
     "author": "",
     "license": "ISC",
