--- a/gc_functions/package.json
+++ b/gc_functions/package.json
@@ -15,6 +15,7 @@
     "license": "ISC",
     "dependencies": {
         "@google-cloud/functions-framework": "^1.3.2",
+        "axios": "^0.19.0",
         "dotenv": "^8.2.0",
         "mongodb": "^3.3.4",
         "request": "^2.88.0",
