--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
         "react-dom": "^16.11.0",
         "react-router-dom": "^5.1.2",
         "react-scripts": "3.2.0",
+        "react-spring": "^8.0.27",
         "semantic-ui-css": "^2.4.1",
-        "semantic-ui-react": "^0.88.1"
+        "semantic-ui-react": "^0.88.1",
+        "toasted-notes": "^3.0.0"
     },
     "scripts": {
         "start": "react-scripts start",
