--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "axios": "^0.19.0",
         "lodash": "^4.17.15",
+        "moment": "^2.24.0",
         "query-string": "^6.8.3",
         "react": "^16.11.0",
         "react-dom": "^16.11.0",
