--- a/gc_functions/package.json
+++ b/gc_functions/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@google-cloud/functions-framework": "^1.3.2",
         "axios": "^0.19.0",
+        "bcrypt": "^3.0.7",
         "dotenv": "^8.2.0",
         "mongodb": "^3.3.4",
         "request": "^2.88.0",
