--- a/gc_functions/package.json
+++ b/gc_functions/package.json
@@ -18,6 +18,7 @@
         "axios": "^0.19.0",
         "bcrypt": "^3.0.7",
         "dotenv": "^8.2.0",
+        "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.3.4",
         "request": "^2.88.0",
         "request-promise-native": "^1.0.8"
