--- a/migration_scripts/package.json
+++ b/migration_scripts/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "csvtojson": "^2.0.10"
+    "csvtojson": "^2.0.10",
+    "lodash": "^4.17.15"
   }
 }
