--- a/gc_functions/package.json
+++ b/gc_functions/package.json
@@ -17,7 +17,9 @@
         "@google-cloud/functions-framework": "^1.3.2",
         "axios": "^0.19.0",
         "bcrypt": "^3.0.7",
+        "cors": "^2.8.5",
         "dotenv": "^8.2.0",
+        "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.3.4",
         "request": "^2.88.0",
