Created testing environment

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "toasted-notes": "^3.0.0"
     },
     "scripts": {
+        "start_dev": "REACT_APP_ENVIRONMENT=development react-scripts start",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
