--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "homepage": "https://jaikamat.github.io/clubhouse-pos-importer/",
     "dependencies": {
         "axios": "^0.19.0",
+        "jquery": "^3.4.1",
         "lodash": "^4.17.15",
         "moment": "^2.24.0",
         "query-string": "^6.8.3",
