- Created a price-update script using Bottleneck to make polite, rate-limited requesting to Scryfall - Created a getCardsByFilter, a function that allows detailed user queries and returns inventory line-items - Created a frontend view to allow users to search and query using basic filters on data

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,10 @@ api
 /gc_functions/production/.env
 /gc_functions/test/.env
 /gc_functions/.env
+/gc_functions/production/.env
+/gc_functions/test/.env
+/gc_functions/pricing_update_scripts/.env
+/gc_functions/prices.json
 
 /migration_scripts/csv_data
 /migration_scripts/output
