--- a/gc_functions/package.json
+++ b/gc_functions/package.json
@@ -17,12 +17,14 @@
         "@google-cloud/functions-framework": "^1.3.2",
         "axios": "^0.19.0",
         "bcrypt": "^3.0.7",
+        "bottleneck": "^2.19.5",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.3.4",
         "request": "^2.88.0",
-        "request-promise-native": "^1.0.8"
+        "request-promise-native": "^1.0.8",
+        "superagent": "^5.2.1"
     }
 }
