Major Release - Receiving/Intake
Key features include:
- Search and Cash/Credit options
- Cash/Credit selection prior to intake
- Clear UI showing cash and/or credit transaction amounts
- Line-items represent single cards for ease of use

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "react-spring": "^8.0.27",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^0.88.1",
-        "toasted-notes": "^3.0.0"
+        "toasted-notes": "^3.0.0",
+        "uuid": "^3.4.0"
     },
     "scripts": {
         "start_dev": "REACT_APP_ENVIRONMENT=development react-scripts start",
