--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "clubhouse-pos-importer",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://jaikamat.github.io/clubhouse-pos-importer/",
+    "homepage": "http://www.chcollector.com/",
     "dependencies": {
         "axios": "^0.19.0",
         "jquery": "^3.4.1",
