Testing - Basic API features
- Created development API tests for Add/Remove cards

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "start_dev": "REACT_APP_ENVIRONMENT=development react-scripts start",
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test",
+        "test": "jest",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
