--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "react-spring": "^8.0.27",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^0.88.1",
+        "styled-components": "^5.0.1",
         "toasted-notes": "^3.0.0",
         "uuid": "^3.4.0"
     },
