Scryfall bulk update DB script:
Why:
- Updating the test and production databases was once a manual process, this fixes it
- A new feature required creating an index on `id` in addition to bulk updates, and it needed to be automated

What:
- User passes --prod or --test as arguments and updates db accordingly
- Downloads bulk JSON, executes mongoImport, and creates an index on `id`

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ api
 
 # Ignore test login credentials
 /src/__tests__/data/.env
+
+# Ignore bulk cards
+/gc_functions/db_scripts/scryfall_bulk.json
