--- a/gc_functions/package.json
+++ b/gc_functions/package.json
@@ -26,6 +26,7 @@
         "mongodb": "^3.3.4",
         "request": "^2.88.0",
         "request-promise-native": "^1.0.8",
-        "superagent": "^5.2.1"
+        "superagent": "^5.2.1",
+        "yargs": "^15.3.1"
     }
 }
