--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ api
 # Ignore bulk cards
 /gc_functions/db_scripts/scryfall_bulk.json
 scryfall-default-cards.json
+/gc_functions/db_scripts/update_scryfall_bulk/bulk_data/*
