--- a/gc_functions/package.json
+++ b/gc_functions/package.json
@@ -15,6 +15,7 @@
     "license": "ISC",
     "dependencies": {
         "@google-cloud/functions-framework": "^1.3.2",
+        "JSONStream": "^1.3.5",
         "axios": "^0.19.0",
         "bcrypt": "^3.0.7",
         "bottleneck": "^2.19.5",
