--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         ]
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.0.2",
         "dotenv": "^8.2.0",
         "puppeteer": "^2.1.1"
