Added Formik dependency

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "homepage": "http://www.chcollector.com/",
     "dependencies": {
         "axios": "^0.19.0",
+        "formik": "^2.1.5",
         "highcharts": "^8.0.4",
         "jquery": "^3.4.1",
         "lodash": "^4.17.15",
