--- a/monolith/package.json
+++ b/monolith/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -16,6 +17,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "request-promise-native": "^1.0.9"
   }
 }
