--- a/monolith/package.json
+++ b/monolith/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.2",
     "morgan": "~1.9.1",
+    "request": "^2.88.2",
     "request-promise-native": "^1.0.9"
   }
 }
