--- a/monolith/package.json
+++ b/monolith/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "start": "ENVIRONMENT=development node ./bin/www"
+        "start": "PORT=7331 ENVIRONMENT=development node ./bin/www"
     },
     "dependencies": {
         "axios": "^0.20.0",
