--- a/monolith/package.json
+++ b/monolith/package.json
@@ -3,8 +3,8 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "start": "PORT=7331 ENVIRONMENT=development node ./bin/www",
-        "start-production": "node ./bin/www"
+        "start": "node ./bin/www",
+        "start-dev": "PORT=7331 ENVIRONMENT=development node ./bin/www"
     },
     "dependencies": {
         "axios": "^0.20.0",
