--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "@testing-library/react": "^11.0.2",
         "dotenv": "^8.2.0",
         "eslint": "^7.11.0",
+        "eslint-plugin-react": "^7.21.4",
         "prettier": "2.1.1",
         "puppeteer": "^2.1.1"
     }
