--- a/monolith/package.json
+++ b/monolith/package.json
@@ -4,7 +4,8 @@
     "private": true,
     "scripts": {
         "start": "node ./bin/www",
-        "start-dev": "PORT=7331 ENVIRONMENT=development node ./bin/www"
+        "start-dev": "PORT=7331 ENVIRONMENT=development node ./bin/www",
+        "deploy": "gcloud app deploy app.yaml --stop-previous-version"
     },
     "dependencies": {
         "axios": "^0.20.0",
