--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ node_modules
 # Ignore app yaml (has env vars)
 app.yaml
 
+#Ignore vscode settings
+.vscode
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
