--- a/monolith/package.json
+++ b/monolith/package.json
@@ -8,19 +8,34 @@
         "deploy": "gcloud app deploy app.yaml --stop-previous-version"
     },
     "dependencies": {
-        "axios": "^0.20.0",
+        "axios": "^0.21.1",
         "bcrypt": "^5.0.0",
-        "cookie-parser": "~1.4.4",
+        "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
-        "debug": "~2.6.9",
+        "debug": "^2.6.9",
         "dotenv": "^8.2.0",
-        "express": "~4.16.1",
-        "http-errors": "~1.6.3",
+        "express": "^4.17.1",
+        "http-errors": "^1.6.3",
         "jade": "~1.11.0",
         "jsonwebtoken": "^8.5.1",
-        "mongodb": "^3.6.2",
-        "morgan": "~1.9.1",
+        "mongodb": "^3.6.3",
+        "morgan": "^1.9.1",
         "request": "^2.88.2",
         "request-promise-native": "^1.0.9"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^3.0.0",
+        "@types/cookie-parser": "^1.4.2",
+        "@types/cors": "^2.8.9",
+        "@types/debug": "^4.1.5",
+        "@types/express": "^4.17.9",
+        "@types/http-errors": "^1.8.0",
+        "@types/jsonwebtoken": "^8.5.0",
+        "@types/mongodb": "^3.6.3",
+        "@types/morgan": "^1.9.2",
+        "@types/request": "^2.48.5",
+        "@types/request-promise-native": "^1.0.17",
+        "tslint": "^5.12.1",
+        "typescript": "^3.3.3"
     }
 }
