--- a/monolith/package.json
+++ b/monolith/package.json
@@ -3,8 +3,8 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "start": "node ./bin/www",
-        "start-dev": "PORT=7331 ENVIRONMENT=development node ./bin/www",
+        "start": "node ./built/bin/www",
+        "start-dev": "PORT=7331 ENVIRONMENT=development node ./built/bin/www",
         "deploy": "gcloud app deploy app.yaml --stop-previous-version"
     },
     "dependencies": {
