ignoring transpiled TS files

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ api
 /gc_functions/db_scripts/scryfall_bulk.json
 scryfall-default-cards.json
 /gc_functions/db_scripts/update_scryfall_bulk/bulk_data/*
+
+# Ignore built tsc files
+/built
