--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     },
     "scripts": {
         "start": "REACT_APP_ENVIRONMENT=development react-scripts start",
-        "build": "react-scripts build",
+        "build": "react-scripts build && mv ./build ./docs",
         "test": "react-scripts test --env=jsdom-fourteen",
         "eject": "react-scripts eject"
     },
