--- a/monolith/package.json
+++ b/monolith/package.json
@@ -31,11 +31,13 @@
         "@types/debug": "^4.1.5",
         "@types/express": "^4.17.9",
         "@types/http-errors": "^1.8.0",
+        "@types/jest": "^26.0.20",
         "@types/jsonwebtoken": "^8.5.0",
         "@types/mongodb": "^3.6.3",
         "@types/morgan": "^1.9.2",
         "@types/request": "^2.48.5",
         "@types/request-promise-native": "^1.0.17",
+        "jest": "^26.6.3",
         "tslint": "^5.20.1",
         "typescript": "^3.9.7"
     }
