ignore built directory

--- a/monolith/tsconfig.json
+++ b/monolith/tsconfig.json
@@ -6,6 +6,6 @@
       "types": ["node", "jest"],
       "esModuleInterop": true,
     },
-    "exclude": ["*/**.test.js"],
+    "exclude": ["*/**.test.js", "built"],
     "include": ["./**/*"],
   }
