--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
     "private": true,
     "homepage": "http://www.chcollector.com/",
     "dependencies": {
+        "@types/jest": "^26.0.20",
+        "@types/node": "^14.14.31",
+        "@types/react": "^17.0.2",
+        "@types/react-dom": "^17.0.1",
         "axios": "^0.19.0",
         "formik": "^2.1.5",
         "highcharts": "^8.0.4",
@@ -20,6 +24,7 @@
         "semantic-ui-react": "^2.0.1",
         "styled-components": "^5.0.1",
         "toasted-notes": "^3.0.0",
+        "typescript": "^4.2.2",
         "uuid": "^3.4.0"
     },
     "scripts": {
