--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.0.2",
         "@types/react-router-dom": "^5.1.7",
+        "@types/styled-components": "^5.1.7",
         "dotenv": "^8.2.0",
         "prettier": "2.1.1",
         "puppeteer": "^2.1.1"
