--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "scripts": {
         "start": "REACT_APP_ENVIRONMENT=development react-scripts start",
         "build": "react-scripts build && mv ./build ./docs",
-        "test": "react-scripts test --env=jsdom-fourteen",
+        "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
     "jest": {
