--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     },
     "scripts": {
         "start": "REACT_APP_ENVIRONMENT=development react-scripts start",
-        "build": "react-scripts build && mv ./build ./docs",
+        "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
