--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "devDependencies": {
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.5",
+        "@types/jquery": "^3.5.5",
+        "@types/lodash": "^4.14.168",
         "@types/react-router-dom": "^5.1.7",
         "@types/styled-components": "^5.1.7",
         "dotenv": "^8.2.0",
