--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,6 +59,7 @@
         "@types/lodash": "^4.14.168",
         "@types/react-router-dom": "^5.1.7",
         "@types/styled-components": "^5.1.7",
+        "@types/uuid": "^8.3.0",
         "dotenv": "^8.2.0",
         "prettier": "2.1.1",
         "puppeteer": "^2.1.1"
