--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,8 @@
         "start": "REACT_APP_ENVIRONMENT=development react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "typecheck": "tsc --noEmit"
     },
     "jest": {
         "watchPathIgnorePatterns": [
