--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
         "react-router-dom": "^5.1.2",
         "react-scripts": "4.0.3",
         "react-spring": "^8.0.27",
+        "react-to-print": "^2.12.6",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^2.0.1",
         "styled-components": "^5.0.1",
