--- a/gc_functions/package.json
+++ b/gc_functions/package.json
@@ -4,12 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "addCardToInventory": "functions-framework --target=addCardToInventory",
-        "getCardQuantitiesFromInventory": "functions-framework --target=getCardQuantitiesFromInventory",
-        "getCardsByTitle": "functions-framework --target=getCardsByTitle",
-        "refreshLightspeedAuthToken": "functions-framework --target=refreshLightspeedAuthToken",
-        "getJwt": "functions-framework --target=getJwt"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
     "license": "ISC",
