--- a/gc_functions/package.json
+++ b/gc_functions/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "update-test-bulk": "node ./db_scripts/update_scryfall_bulk/index.js --database test"
     },
     "author": "",
     "license": "ISC",
