--- a/gc_functions/package.json
+++ b/gc_functions/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
+        "functions": "cd ./src && npx @google-cloud/functions-framework --target getPriceFromTcg --port 3030",
         "update-test-bulk": "node ./db_scripts/update_scryfall_bulk/index.js --database test",
         "update-prod-bulk": "node ./db_scripts/update_scryfall_bulk/index.js --database clubhouse_collection_production"
     },
