--- a/gc_functions/package.json
+++ b/gc_functions/package.json
@@ -27,5 +27,8 @@
         "request-promise-native": "^1.0.8",
         "superagent": "^5.2.1",
         "yargs": "^16.2.0"
+    },
+    "devDependencies": {
+        "npm-watch": "^0.9.0"
     }
 }
