hot reloading using npm-watch

--- a/gc_functions/package.json
+++ b/gc_functions/package.json
@@ -3,8 +3,12 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "watch": {
+        "functions": "./src/*.js"
+    },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
+        "watch": "npm-watch functions",
         "functions": "cd ./src && npx @google-cloud/functions-framework --target getPriceFromTcg --port 3030",
         "update-test-bulk": "node ./db_scripts/update_scryfall_bulk/index.js --database test",
         "update-prod-bulk": "node ./db_scripts/update_scryfall_bulk/index.js --database clubhouse_collection_production"
