--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "homepage": "http://www.chcollector.com/",
     "dependencies": {
+        "@material-ui/core": "^4.11.4",
         "@types/jest": "^26.0.20",
         "@types/node": "^14.14.31",
         "@types/react": "^17.0.2",
