--- a/monolith/package.json
+++ b/monolith/package.json
@@ -19,6 +19,7 @@
         "express": "^4.17.1",
         "http-errors": "^1.8.0",
         "jade": "~1.11.0",
+        "joi": "^17.4.0",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.6.3",
         "morgan": "^1.10.0",
