--- a/monolith/package.json
+++ b/monolith/package.json
@@ -7,7 +7,8 @@
         "gcp-build": "tsc -p .",
         "start-dev": "rm -r ./built && tsc -p . && echo \"Built TS source\" && PORT=7331 ENVIRONMENT=development node ./built/bin/www",
         "deploy": "gcloud app deploy app.yaml --stop-previous-version",
-        "test": "ENVIRONMENT=localtest jest"
+        "test": "ENVIRONMENT=localtest jest",
+        "typecheck": "tsc --noEmit"
     },
     "dependencies": {
         "axios": "^0.21.1",
