--- a/monolith/package.json
+++ b/monolith/package.json
@@ -5,9 +5,10 @@
     "scripts": {
         "start": "node ./built/bin/www",
         "gcp-build": "tsc -p .",
-        "start-dev": "rm -r ./built && tsc -p . && echo \"Built TS source\" && PORT=7331 ENVIRONMENT=development node ./built/bin/www",
+        "build": "rm -r ./built && tsc -p . && echo \"Built TS source\"",
+        "start-dev": "npm run build && PORT=7331 ENVIRONMENT=development node ./built/bin/www",
         "deploy": "gcloud app deploy app.yaml --stop-previous-version",
-        "test": "ENVIRONMENT=localtest jest",
+        "test": "npm run build && ENVIRONMENT=localtest jest",
         "typecheck": "tsc --noEmit"
     },
     "dependencies": {
