--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
     "homepage": "http://www.chcollector.com/",
     "dependencies": {
         "@material-ui/core": "^4.11.4",
+        "@material-ui/icons": "^4.11.2",
         "@types/jest": "^26.0.20",
         "@types/node": "^14.14.31",
         "@types/react": "^17.0.2",
