--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "homepage": "http://www.chcollector.com/",
     "dependencies": {
+        "@fontsource/roboto": "^4.5.0",
         "@material-ui/core": "^4.11.4",
         "@material-ui/icons": "^4.11.2",
         "@types/jest": "^26.0.20",
