--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
         "@fontsource/roboto": "^4.5.0",
         "@material-ui/core": "^4.11.4",
         "@material-ui/icons": "^4.11.2",
+        "@material-ui/lab": "^4.0.0-alpha.60",
         "@types/jest": "^26.0.20",
         "@types/node": "^14.14.31",
         "@types/react": "^17.0.2",
