--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,6 +61,7 @@
     "devDependencies": {
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.5",
+        "@testing-library/react-hooks": "^7.0.1",
         "@types/jquery": "^3.5.5",
         "@types/lodash": "^4.14.168",
         "@types/react-router-dom": "^5.1.7",
