--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
         "uuid": "^3.4.0"
     },
     "scripts": {
+        "analyze": "source-map-explorer 'build/static/js/*.js'",
         "start": "REACT_APP_ENVIRONMENT=development react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
@@ -68,6 +69,7 @@
         "@types/uuid": "^8.3.0",
         "dotenv": "^8.2.0",
         "prettier": "2.1.1",
-        "puppeteer": "^2.1.1"
+        "puppeteer": "^2.1.1",
+        "source-map-explorer": "^2.5.2"
     }
 }
