--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,7 @@
     },
     "scripts": {
         "analyze": "source-map-explorer 'build/static/js/*.js'",
-        "start": "REACT_APP_ENVIRONMENT=development react-scripts start",
+        "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
