--- a/monolith/package.json
+++ b/monolith/package.json
@@ -6,9 +6,9 @@
         "start": "node ./built/bin/www",
         "gcp-build": "tsc -p .",
         "build": "rm -r ./built && tsc -p . && echo \"Built TS source\"",
-        "start-dev": "npm run build && PORT=7331 ENVIRONMENT=development node ./built/bin/www",
+        "start-dev": "npm run build && PORT=7331 node ./built/bin/www",
         "deploy": "gcloud app deploy app.yaml --stop-previous-version",
-        "test": "npm run build && ENVIRONMENT=localtest jest",
+        "test": "npm run build && jest",
         "typecheck": "tsc --noEmit"
     },
     "dependencies": {
