--- a/gc_functions/package.json
+++ b/gc_functions/package.json
@@ -17,21 +17,23 @@
     "license": "ISC",
     "dependencies": {
         "@google-cloud/functions-framework": "^1.8.0",
-        "JSONStream": "^1.3.5",
         "axios": "^0.19.0",
         "bcrypt": "^3.0.7",
         "bottleneck": "^2.19.5",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "JSONStream": "^1.3.5",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.3.4",
         "request": "^2.88.0",
         "request-promise-native": "^1.0.8",
         "superagent": "^5.2.1",
+        "typescript": "^4.4.3",
         "yargs": "^16.2.0"
     },
     "devDependencies": {
+        "@types/jsonstream": "^0.8.30",
         "npm-watch": "^0.9.0"
     }
 }
