--- a/gc_functions/package.json
+++ b/gc_functions/package.json
@@ -34,6 +34,7 @@
     },
     "devDependencies": {
         "@types/jsonstream": "^0.8.30",
+        "@types/yargs": "^17.0.2",
         "npm-watch": "^0.9.0"
     }
 }
