--- a/monolith/package.json
+++ b/monolith/package.json
@@ -19,6 +19,7 @@
         "debug": "^2.6.9",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "express-winston": "^4.2.0",
         "http-errors": "^1.8.0",
         "jade": "~1.11.0",
         "joi": "^17.4.0",
@@ -27,7 +28,8 @@
         "mongodb": "^3.6.3",
         "morgan": "^1.10.0",
         "request": "^2.88.2",
-        "request-promise-native": "^1.0.9"
+        "request-promise-native": "^1.0.9",
+        "winston": "^3.3.3"
     },
     "devDependencies": {
         "@types/bcrypt": "^3.0.0",
