--- a/gc_functions/package.json
+++ b/gc_functions/package.json
@@ -30,12 +30,15 @@
         "request": "^2.88.0",
         "request-promise-native": "^1.0.8",
         "superagent": "^5.2.1",
-        "typescript": "^4.4.3",
         "yargs": "^17.1.1"
     },
     "devDependencies": {
+        "@types/jest": "^27.0.2",
         "@types/jsonstream": "^0.8.30",
         "@types/yargs": "^17.0.2",
-        "npm-watch": "^0.9.0"
+        "jest": "^27.2.4",
+        "npm-watch": "^0.9.0",
+        "ts-jest": "^27.0.5",
+        "typescript": "^4.4.3"
     }
 }
