--- a/gc_functions/tsconfig.json
+++ b/gc_functions/tsconfig.json
@@ -3,7 +3,7 @@
         "outDir": "./built",
         "allowJs": true,
         "target": "es5",
-        "types": ["node"],
+        "types": ["node", "jest"],
         "esModuleInterop": true
     },
     "exclude": ["*/**.test.js", "built"],
