--- a/db_scripts/package.json
+++ b/db_scripts/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "dependencies": {
         "axios": "^0.19.0",
+        "bcrypt": "^5.0.1",
         "dotenv": "^8.2.0",
         "JSONStream": "^1.3.5",
         "jsonwebtoken": "^8.5.1",
