--- a/gc_functions/package.json
+++ b/gc_functions/package.json
@@ -10,9 +10,7 @@
         "test": "jest",
         "watch": "npm-watch functions",
         "functions": "cd ./src && npx @google-cloud/functions-framework --target getPriceFromTcg --port 3030",
-        "build": "rm -r ./built && tsc -p . && echo \"Built TS source\"",
-        "update-test-bulk": "npm run build && node ./built/db_scripts/update_scryfall_bulk/index.js --database test",
-        "update-prod-bulk": "npm run build && node ./built/db_scripts/update_scryfall_bulk/index.js --database clubhouse_collection_production"
+        "build": "rm -r ./built && tsc -p . && echo \"Built TS source\""
     },
     "author": "",
     "license": "ISC",
