--- a/db_scripts/package.json
+++ b/db_scripts/package.json
@@ -15,6 +15,7 @@
         "axios": "^0.19.0",
         "bcrypt": "^5.0.1",
         "dotenv": "^8.2.0",
+        "joi": "^17.6.0",
         "JSONStream": "^1.3.5",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.3.4",
