--- a/gc_functions/package.json
+++ b/gc_functions/package.json
@@ -9,7 +9,7 @@
     "scripts": {
         "test": "jest",
         "watch": "npm-watch functions",
-        "functions": "cd ./src && npx @google-cloud/functions-framework --target getPriceFromTcg --port 3030",
+        "functions": "npm run build && cd ./built/src && npx @google-cloud/functions-framework --target getPriceFromTcg --port 3030",
         "build": "rm -r ./built && tsc -p . && echo \"Built TS source\""
     },
     "author": "",
